Testing ZGC