@@ -14,8 +14,8 @@ COPY src/ /usr/src/app/src
 RUN clj -A:uberjar
 
 # use clean image
-FROM openjdk:11
+FROM openjdk:12
 
 COPY --from=builder /usr/src/app/target/app-1.0.0-SNAPSHOT-standalone.jar /usr/src/app/app.jar
 
-CMD ["java","-XX:+UseContainerSupport","-XX:MaxRAMPercentage=90","-jar","/usr/src/app/app.jar"]
+CMD ["java","-XX:+UseContainerSupport","-XX:MaxRAMPercentage=90","-XX:+UnlockExperimentalVMOptions","-XX:+UseZGC","-jar","/usr/src/app/app.jar"]
